[tool.poetry]
name = "mds_pycounts_srfrew"
version = "0.1.0"
description = "Calculate words in a text file."
authors = ["Simon Frew"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
